# mcp_rag

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: router.py
src/api/v1/endpoints/: documents.py
src/core/config/: settings.py
src/core/logging/: logger.py
src/database/: database.py
src/mcp/: client.py  client_GRAD.py  server.py
src/services/embed_store/: embed_and_store.py
src/services/object_store/: storage.py
src/services/vector_store/: vector_store_ops.py
