[project]
name = "proj1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.4",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "gradio>=5.40.0",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.3",
    "langmem>=0.0.28",
    "loguru>=0.7.3",
    "mcp>=1.11.0",
    "pymongo>=4.13.2",
    "pymupdf4llm>=0.0.24",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.3",
]
